FIL-8 Added logo and fixed arrows alignment

--- a/FilmScanner/ClientApp/src/app/home/home.component.css
+++ b/FilmScanner/ClientApp/src/app/home/home.component.css
@@ -11,5 +11,7 @@ hr {
 }
 
 .arrow {
-     width: 50%;
+    width: 5vw;
+    max-width: 50%;
+    min-width: 20%;
 }
